--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@
   <script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU" defer></script>
   <script src="js/inputmask.js" defer></script>
   <script src="js/validator.js" defer></script>
-  <script src="https://unpkg.com/@popperjs/core@2"></script>
-  <script src="https://unpkg.com/tippy.js@6"></script>
+  <script src="https://unpkg.com/@popperjs/core@2" defer></script>
+  <script src="https://unpkg.com/tippy.js@6" defer></script>
   <script src="js/accordion.js" defer></script>
   <script src="js/select.js" defer></script>
   <script src="js/simplebar.js" defer></script>
   <script src="js/swiper.js" defer></script>
   <script src="js/index.js" defer></script>
-  <script src="js/test.js" defer></script>
 </head>
 <body>
   <div class="top-wrapper">
     <header class="header">
       <div class="header__menu-top">
         <div class="container header__container-top">
-          <a class="header__menu-list-item-link-image">
-            <img class="header__menu-list-item-image-item" src="./img/header-logo.png" alt="Логотип художественной галерее Blanchard">
+          <a class="header__image">
+            <img class="header__image-item" src="./img/header-logo.svg" alt="Логотип художественной галерее Blanchard">
           </a>
-          <nav class="header__menu-top-nav">
-            <div class="header__menu-top-wrap">
+          <div class="header__menu-top-nav">
+            <nav class="header__menu-top-wrap">
               <ul class="list-reset header__menu-top-list">
                 <li class="header__menu-item">
                   <a class="header__menu-list-item-link" href="#section-about">
@@ -74,11 +73,11 @@
                   </button>
                 </li>
               </ul>
-            </div>
+            </nav>
             <button aria-label="Открытие меню" class="btn-reset header__menu-durger">
               <span></span>
             </button>
-          </nav>
+          </div>
           <button aria-label="Войти" class="btn-reset header__menu-top-login" type="button">
             <svg class="menu__login-image" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z" fill="white"/>
@@ -1139,7 +1138,7 @@
     <div class="container footer__container">
       <div class="footer__list-item-logo">
         <a href="#">
-          <img class="footer__list-item-logo-img" src="./img/header-logo.png" alt="Логотип Blanchard">
+          <img class="footer__list-item-logo-img" src="./img/header-logo.svg" alt="Логотип Blanchard">
         </a>
     </div>
       <ul class="list-reset footer__list">
