'change_header_search'

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <input class="header__menu-search-input" type="text" name="search">
               </div>
             <button aria-label="Закрыть поиск" class="btn-reset header__menu-search-close-btn js-close" type="button">
-              <svg width="23" height="23" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="header__menu-search-close" width="23" height="23" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="2.63623" width="37.2838" height="3.72838" transform="rotate(45 2.63623 0)" fill="white"/>
                 <rect y="26.3636" width="37.2838" height="3.72838" transform="rotate(-45 0 26.3636)" fill="white"/>
               </svg>
