--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   </li>
                   <li class="header__menu-item">
                     <a class="header__menu-list-item-link" href="#section-catalog">
-                      Каталог
+                      Каталог1
                     </a>
                   </li>
                   <li class="header__menu-item">
