--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   </li>
                   <li class="header__menu-item">
                     <a class="header__menu-list-item-link" href="#section-catalog">
-                      Каталог12
+                      Каталог
                     </a>
                   </li>
                   <li class="header__menu-item">
@@ -115,7 +115,7 @@
       </div>
       <div class="header__menu-bottom">
         <div class="container header__container-bottom">
-          <ul class="list-reset header__menu-list">v
+          <ul class="list-reset header__menu-list">
             <li class="header__menu-list-item">
               <button aria-label="Реализм" class="btn-reset header__menu-list-item-btn">
                 <span class="header__item">
