--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
       <div class="header__menu-bottom">
         <div class="container header__container-bottom">
-          <ul class="list-reset header__menu-list">v
+          <ul class="list-reset header__menu-list">
             <li class="header__menu-list-item">
               <button aria-label="Реализм" class="btn-reset header__menu-list-item-btn">
                 <span class="header__item">
