--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="js/swiper.js" defer></script>
   <script src="js/index.js" defer></script>
 </head>
-<body class="test">
+<body>
   <div class="top-wrapper">
     <header class="top-wrapper__header header">
       <div class="header__menu-top">
@@ -883,7 +883,7 @@
           <div class="swiper-container section-events__slides-container">
             <ul class="list-reset swiper-wrapper section-events__swiper-wrapper">
               <li class="swiper-slide section-events__slide">
-                <div class="section-events__card-image  section-events__card-image-one"></div>
+                <img class="section-events__card-image" src="./img/card-one.jpg" alt="События в Blanchard">
                 <div class="section-events__card-content">
                   <div class="section-events__card-image-comment">
                     <span>Музей им. Щусева</span>
@@ -903,7 +903,7 @@
                 </div>
               </li>
               <li class="swiper-slide section-events__slide">
-                <div class="section-events__card-image  section-events__card-image-two"></div>
+                <img class="section-events__card-image" src="./img/card-two.jpg" alt="События в Blanchard">
                 <div class="section-events__card-content">
                   <div class="section-events__card-image-comment">
                     <span>ММОМА</span>
@@ -923,7 +923,7 @@
                 </div>
               </li>
               <li class="swiper-slide section-events__slide">
-                <div class="section-events__card-image  section-events__card-image-three"></div>
+                <img class="section-events__card-image" src="./img/card-three.jpg" alt="События в Blanchard">
                 <div class="section-events__card-content">
                   <div class="section-events__card-image-comment">
                     <span>Еврейский музей</span>
@@ -943,7 +943,7 @@
                 </div>
               </li>
               <li class="swiper-slide section-events__slide">
-                <div class="section-events__card-image  section-events__card-image-four"></div>
+                <img class="section-events__card-image" src="./img/card-four.jpg" alt="События в Blanchard">
                 <div class="section-events__card-content">
                   <div class="section-events__card-image-comment">
                     <span>ММАМ</span>
@@ -963,7 +963,7 @@
                 </div>
               </li>
               <li class="swiper-slide section-events__slide">
-                <div class="section-events__card-image  section-events__card-image-five"></div>
+                <img class="section-events__card-image" src="./img/card-five.jpg" alt="События в Blanchard">
                 <div class="section-events__card-content">
                   <div class="section-events__card-image-comment">
                     <span>Третьяковка на&nbsp;Крымском валу</span>
