--- a/index.html
+++ b/index.html
@@ -306,19 +306,6 @@
                 </div>
               </div>
             </li>
-            <!-- <li id="search" class="header__search">
-              <div class="header__search-elements">
-                <div class="header__search-item-image">
-                  <svg aria-label="Поиск по сайту" class="header__search-item-image-svg" width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="6.8678" height="1.71695" transform="matrix(-0.718931 0.695081 0.718931 0.695081 4.9375 15.6534)" fill="white"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0969 18C7.53041 18 3.99692 14.3229 3.99692 10C3.99692 5.67715 7.53041 2 12.0969 2C16.6634 2 20.1969 5.67715 20.1969 10C20.1969 14.3229 16.6634 18 12.0969 18ZM12.0969 20C6.57408 20 2.09692 15.5228 2.09692 10C2.09692 4.47715 6.57408 0 12.0969 0C17.6198 0 22.0969 4.47715 22.0969 10C22.0969 15.5228 17.6198 20 12.0969 20Z" fill="white"/>
-                  </svg>
-                </div>
-                <div class="header__search-item">
-                  <input class="header__item-form" placeholder="Поиск по сайту" type="search">
-                </div>
-              </div>
-            </li> -->
           </ul>
           <div id="search" class="header__search">
             <form class="header__search-item js-form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
@@ -495,7 +482,7 @@
             Акционеры крупнейших компаний, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. Являясь всего лишь частью общей картины, стремящиеся вытеснить традиционное производство, нанотехнологии и&nbsp;по&nbsp;сей день остаются уделом либералов, которые жаждут быть функционально разнесены на&nbsp;независимые элементы.
           </p>
         </div>
-        <article class="section-catalog__content-bottom">
+        <div class="section-catalog__content-bottom">
           <div class="section-catalog__content-bottom-left section-catalog__content-bottom-left_active" data-target="one">
             <img class="section-catalog__content-bottom-left-image" src="./img/catalog-image-1.jpg" alt="Domenico Ghirlandaio">
             <h3 class="title-reset section-catalog__content-bottom-left-title">
@@ -505,7 +492,7 @@
               <span class="section-catalog__content-bottom-left-text-date">2&nbsp;июня 1448&nbsp;&mdash; 11&nbsp;января 1494.</span>Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и&nbsp;сын Ридольфо. Глава художественной мастерской, где юный Микеланджело в&nbsp;течение года овладевал профессиональными навыками. Автор фресковых циклов, в&nbsp;которых выпукло, со&nbsp;всевозможными подробностями показана домашняя жизнь библейских персонажей (в&nbsp;их&nbsp;роли выступают знатные граждане Флоренции в&nbsp;костюмах того времени).
             </p>
           </div>
-          <article class="section-catalog__content-bottom-left" data-target="two">
+          <div class="section-catalog__content-bottom-left" data-target="two">
             <img class="section-catalog__content-bottom-left-image" src="./img/plug-image.jpg" alt="Изображение художника">
             <h3 class="section-catalog__content-bottom-left section-catalog__content-bottom-left-title-dev">
               Что мы&nbsp;о&nbsp;нём знаем?
@@ -516,7 +503,7 @@
             <a class="section-catalog__content-bottom-left-link-dev" href="#section-gallery">
               В галерею
             </a>
-          </article>
+          </div>
           <div class="section-catalog__content-bottom-right">
             <ul class="list-reset section-catalog__accordion-container">
               <li class="section-catalog__accordion-list-item ac js-enabled">
@@ -675,7 +662,7 @@
                   </svg>
                 </button>
           
-                <article class="section-catalog__accordion-content ac-panel">
+                <div class="section-catalog__accordion-content ac-panel">
                   <div class="section-catalog__accordion-content-wrap">
                     <div class="section-catalog__content-accordion-development-image">
                       <div class="section-catalog__content-accordion-development-image-item"></div>
@@ -692,7 +679,7 @@
                       </a>
                     </div>
                   </div>
-                </article>
+                </div>
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
@@ -709,7 +696,7 @@
                     <path d="M33.3333 26.6667L25 18.3333L16.6667 26.6667" stroke="black" />
                   </svg>
                 </button>
-                <article class="section-catalog__accordion-content ac-panel">
+                <div class="section-catalog__accordion-content ac-panel">
                   <div class="section-catalog__accordion-content-wrap">
                     <div class="section-catalog__content-accordion-development-image">
                       <div class="section-catalog__content-accordion-development-image-item"></div>
@@ -726,7 +713,7 @@
                       </a>
                     </div>
                   </div>
-                </article>
+                </div>
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
@@ -743,7 +730,7 @@
                     <path d="M33.3333 26.6667L25 18.3333L16.6667 26.6667" stroke="black" />
                   </svg>
                 </button>
-                <article class="section-catalog__accordion-content ac-panel">
+                <div class="section-catalog__accordion-content ac-panel">
                   <div class="section-catalog__accordion-content-wrap">
                     <div class="section-catalog__content-accordion-development-image">
                       <div class="section-catalog__content-accordion-development-image-item"></div>
@@ -760,7 +747,7 @@
                       </a>
                     </div>
                   </div>
-                </article>
+                </div>
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
@@ -777,7 +764,7 @@
                     <path d="M33.3333 26.6667L25 18.3333L16.6667 26.6667" stroke="black" />
                   </svg>
                 </button>
-                <article class="section-catalog__accordion-content ac-panel">
+                <div class="section-catalog__accordion-content ac-panel">
                   <div class="section-catalog__accordion-content-wrap">
                     <div class="section-catalog__content-accordion-development-image">
                       <div class="section-catalog__content-accordion-development-image-item"></div>
@@ -794,7 +781,7 @@
                       </a>
                     </div>
                   </div>
-                </article>
+                </div>
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
@@ -811,7 +798,7 @@
                     <path d="M33.3333 26.6667L25 18.3333L16.6667 26.6667" stroke="black" />
                   </svg>
                 </button>
-                <article class="section-catalog__accordion-content ac-panel">
+                <div class="section-catalog__accordion-content ac-panel">
                   <div class="section-catalog__accordion-content-wrap">
                     <div class="section-catalog__content-accordion-development-image">
                       <div class="section-catalog__content-accordion-development-image-item"></div>
@@ -828,7 +815,7 @@
                       </a>
                     </div>
                   </div>
-                </article>
+                </div>
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
@@ -845,7 +832,7 @@
                     <path d="M33.3333 26.6667L25 18.3333L16.6667 26.6667" stroke="black" />
                   </svg>
                 </button>
-                <article class="section-catalog__accordion-content ac-panel">
+                <div class="section-catalog__accordion-content ac-panel">
                   <div class="section-catalog__accordion-content-wrap">
                     <div class="section-catalog__content-accordion-development-image">
                       <div class="section-catalog__content-accordion-development-image-item"></div>
@@ -862,11 +849,11 @@
                       </a>
                     </div>
                   </div>
-                </article>
+                </div>
               </li>
             </ul>
           </div>
-        </article>
+        </div>
       </div>
     </section>
 
@@ -1097,7 +1084,7 @@
                   </label>
                 </li>
               </ul>
-              <button aria-label="Заказать обратный звонок" tabindex="0" class="btn-reset section-feedback__form-button">
+              <button aria-label="Заказать обратный звонок" class="btn-reset section-feedback__form-button">
                 Заказать <span class="section-feedback__form-button-descr">обратный звонок</span>
               </button>
             </form>
